<resources>
    <string name="app_name">Lab7Android</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rated">Rated</string>
    <string name="released">Released</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="actors">Actors</string>
    <string name="plot">Plot</string>

    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="searchMovie">Enter Movie Name Here</string>

    <string name="insert_sql">insert into movie(title,year,rated,released,runtime,genre,actors,plot) values(\'%1$s\',\'%2$s\',\'%3$s\',\'%4$s\',\'%5$s\',\'%6$s\',\'%7$s\',\'%8$s\');</string>
</resources>
